--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>3.0.2</version>
+				<version>3.1.0</version>
 				<configuration>
 					<resources>
 						<resource>
@@ -25,9 +25,18 @@
 				</configuration>
 			</plugin>
 			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.8.1</version>
+		        <configuration>
+		          	<source>1.8</source>
+		          	<target>1.8</target>
+		        </configuration>
+     		</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.22.2</version>
 				<configuration>
 					<suiteXmlFiles>
 						<file>testng.xml</file>
